# dismech-jax

./: .gitignore  FDM.ipynb  README.md  conf.py  pyproject.toml  test.ipynb  test.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst
examples/slinky/: 1d_slinky.ipynb  3d_ribbon_K_is_2_dim_multiset.ipynb  3d_ribbon_K_is_3_dim_multiset.ipynb  3d_slinky.ipynb  3d_slinky_10_loop_K(eps).ipynb  3d_slinky_10_loop_K(eps)_matrix.ipynb  3d_slinky_10_loop_K(eps)_matrix_multiset.ipynb  3d_slinky_10_loop_K(eps)_matrix_multiset_spectral_spread.ipynb  3d_slinky_10_loop_K(eps)_matrix_spectral_spread.ipynb  3d_slinky_10_loop_K(eps)_multiset.ipynb  3d_slinky_10_loop_K_is_2_dim.ipynb  3d_slinky_10_loop_K_is_2_dim_expt.ipynb  3d_slinky_10_loop_K_is_2_dim_multiset.ipynb  3d_slinky_10_loop_K_is_2_dim_multiset_expt.ipynb  3d_slinky_10_loop_K_is_3_dim_multiset.ipynb  3d_slinky_10_loop_K_is_3_dim_multiset_expt.ipynb  3d_slinky_10_loop_slinky.ipynb  3d_slinky_K(eps)_matrix_multiset_spectral_loss.ipynb  3d_slinky_original_copy.ipynb  3d_slinky_spectral_spread_multiset_expt.ipynb  animate.py  output_original.npz  output_original_valid.npz  slinky.npz  slinky_input.ipynb  train.npz  util.py  util_copy.py  util_multiset.py  util_multiset_copy.py  util_multiset_ribbon.py  util_reg_loss.py  valid.npz
examples/slinky/data/: combined_output_train.npz  combined_output_train_new.npz  combined_output_valid.npz  combined_output_valid_new.npz  output.npz  output_old.npz  output_train.npz  output_valid.npz  output_valid_old.npz
examples/slinky/experiment_data/: DLO_slinky_test_data_20260330_194806.json  DLO_slinky_test_data_20260331_135325.json  combine_datasets.ipynb  combined_dataset.npz  create_train_data.ipynb  create_train_valid_data.ipynb  extract_data.py  extract_data_new.py  extract_experiment_data copy.ipynb  extract_experiment_data.ipynb  extract_experiment_data_slinky.ipynb  test_dataset.npz  train.npz  train_dataset_12_pts.npz  train_dataset_22_pts.npz  train_from_experiment.npz  valid.npz
examples/slinky/ribbon/: train_direct_bc.npz
src/dismech_jax/: __init__.py  connectivity.py  geometry.py  mesh.py  params.py  sim.py  solver.py  state.py  triplet.py  util.py
tests/: conftest.py  test_geometry.py  test_mesh.py  test_test.py  test_triplet.py
(+81 files in other folders)
