[project]
name = "dismech-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ryanchaiyakul", email = "ryanchaiyakul@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.22.9",
    "equinox>=0.13.4",
    "jax>=0.9.0",
    "typeguard>=4.5.1",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda13]>=0.9.0",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "optax>=0.2.7",
    "ruff>=0.14.14",
]
