[project]
name = "dismech-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ryanchaiyakul", email = "ryanchaiyakul@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beartype>=0.22.9",
    "diffrax>=0.7.2",
    "equinox>=0.13.4",
    "jax>=0.9.0",
    "typeguard>=4.5.1",
    "optax",
    "plotly",
    "nbformat>=4.2.0",
    "matplotlib",
    "ipykernel",
    "jinja2", 
    "pyyaml"
]

[project.optional-dependencies]
cuda = [
    "jax[cuda13]>=0.9.0",
]
tpu = [
    "jax[tpu]>=0.9.0",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "optax>=0.2.7",
    "plotly>=6.6.0",
    "ruff>=0.14.14",
]
